--- a/BackEnd/quickgig/src/main/resources/application.yml
+++ b/BackEnd/quickgig/src/main/resources/application.yml
@@ -4,4 +4,18 @@ server:
 spring:
   application:
     name: quickgig
+  datasource:
+    url: jdbc:postgresql://localhost:5432/quickgig
+    username: postgres
+    password: postgres
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: ${ENDPOINT_EXPOSER:health,info}
