--- a/BackEnd/quickgig/src/main/resources/application.yml
+++ b/BackEnd/quickgig/src/main/resources/application.yml
@@ -13,6 +13,9 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.PostgreSQLDialect
+  app:
+    jwtSecret: ${JWT_SECRET}
+    jwtExpirationMs: ${JWT_EXP_TIME}
 
 management:
   endpoints:
